@@ -35,6 +35,11 @@
 <div class="document">
 
 
+<p>2021-12-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+* utilities/tests/convert.tap: Use sed to count file lines rather
+than wc since wc output is inconsistent.  Fixes SourceForge issue
+#657 &quot;Convert test fails in 1.3.37&quot;.</blockquote>
 <p>2021-12-12  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <p>* version.sh: Update shared library versioning information for
