@@ -1,3 +1,9 @@
+2021-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * utilities/tests/convert.tap: Use sed to count file lines rather
+        than wc since wc output is inconsistent.  Fixes SourceForge issue
+        #657 "Convert test fails in 1.3.37".
+
 2021-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * version.sh: Update shared library versioning information for
